# AgenticAI

./: README.md  main.py  pyproject.toml  requirements.txt  tatus
1-Langgraph Basics/: 1.simplegraph.ipynb  2-chatbot.ipynb  3-dataclassstateschema.ipynb  4-pydantic.ipynb  5-chainsLanggraph.ipynb  6-chatbotwithmultipletools.ipynb  7-ReActAgents.ipynb
2-Langgraph Advance/: 1-Streaming.ipynb
3-debugging/: langgraph.json  openai_agent.py
3-debugging/.langgraph_api/: .langgraph_ops.pckl
4-AgenticRAG/: 1-agenticrag.ipynb  2-ReAct.ipynb  3-agenticRAG_QueryRewrite_Retrieval.ipynb  4-ChainOfThoughtsRAG.ipynb  5-IterativeSelfRelection.ipynb  6-AutonomousRAG.ipynb  7- HierarchialMultiAgentSupervisor.ipynb  8-AdaptiveCorrectiveRAG.ipynb
