[project]
name = "langgraph-agentic-playground"
version = "0.1.0"
description = "Hands-on notebooks and examples for building agentic workflows with LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.3",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langgraph-cli[inmem]>=0.4.29",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tavily-python>=0.7.26",
    "wikipedia>=1.4.0",
]
